# fintrack

./: .env.example  .gitignore  README.md  institutions.md  pyproject.toml
docs/: tax_notes.md
fintrack/: alerts.py  budget.py  cashflow.py  cli.py  config.py  db.py  forecasting.py  overrides.py  plaid_client.py  recurring.py  reports.py  sheets.py  sync.py
fintrack/assets/: __init__.py  db.py  equity.py  loans.py  net_worth.py  prices.py  properties.py  vehicles.py
fintrack/classification/: __init__.py  base.py  plaid.py  rules.py
link_server/: server.py
link_server/templates/: link.html
scripts/: daily.bat  daily.sh  dedupe_imported.py  import_bofa_csv.py  setup_schedule.bat
tests/: test_sync.py
